Fix layout issues for News page

--- a/src/client/site/news_page/news_page.scss
+++ b/src/client/site/news_page/news_page.scss
@@ -11,11 +11,11 @@
     .right {
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: stretch;
 
-//        .view__twitter {
-//            max-width: $size-minecraft-block * 10;
-//        }
+        .view__twitter {
+            align-self: center;
+        }
 
         section {
             &:not(:first-child) {
